plugins {
	id "java"
	id "org.springframework.boot" version "3.5.6"
	id "io.spring.dependency-management" version "1.1.7"
}

group = "org.irmalerrr.employeeservice"
version = "0.0.1-SNAPSHOT"
description = "Task Management System REST"

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

//todo -DONE- @saivanov: давай версии либ вынесем в отдельные проперти(надо блок ext сделать, и завести переменные типа mapstructVersion="1.5.5.Final")
ext {
	mapstructVersion = "1.5.5.Final"
	lombokMapstructVersion = "0.2.0"
	springdocVersion = "2.8.17"
	dotenvVersion = "4.0.0"
}

repositories {
	mavenCentral()
}

configurations {
	mockitoAgent
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-starter-validation"

	testImplementation "org.springframework.boot:spring-boot-starter-test"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"

	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	runtimeOnly "org.postgresql:postgresql"

	implementation "org.flywaydb:flyway-core"
	implementation "org.flywaydb:flyway-database-postgresql"

	testRuntimeOnly "com.h2database:h2"

	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructVersion}"

	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

	implementation "me.paulschwarz:spring-dotenv:${dotenvVersion}"
}

tasks.named("test") {
	useJUnitPlatform()
	jvmArgs "-XX:+EnableDynamicAgentLoading"
}
